# runpod-llamacpp-openai

./: Dockerfile  README.md  app.py  entrypoint.py  handler.py  queue_adapter.py  requirements.txt  verify_openai.py
.github/workflows/: build-and-push.yml
flash/: .env.example  README.md  lb_worker.py  pyproject.toml  requirements.txt
flash_app/: .env.example  README.md  gpu_queue.py  lb_worker.py  pyproject.toml  requirements.txt
flash_app/.flash/: flash_manifest.json  resources.pkl
flash_app/scripts/: codespaces_flash_deploy.sh
